fix z-index navbar

--- a/FrontEnd/src/app/layout/navbar/navbar.component.css
+++ b/FrontEnd/src/app/layout/navbar/navbar.component.css
@@ -5,7 +5,7 @@ nav{
     left: 0;
     width: 100%;
     height: 5rem;
-    z-index: 1;
+    z-index: 8;
     padding: 1rem 2rem !important;
     border-bottom: 1px solid var(--light-gray);
 }
@@ -60,7 +60,7 @@ nav{
 }
 
 .sidenav-content{
-    padding: 1.5rem 0rem;
+    padding: 1.5rem 0;
     display: flex;
     flex-direction: column;
 }
